--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
-    "name": "mmoreram/rsqueue-bundle",
+    "name": "rsqueue/rsqueue-bundle",
     "type": "symfony-bundle",
     "description": "Redis Symfony2 Queue Bundle, a simple and soft redis based message queue for symfony2",
     "keywords": ["rsqueue", "redis", "queue", "symfony"],
-    "homepage":  "http://rsqueue.com",
     "license": "MIT",
     "authors": [
         {
