--- a/Resources/config/collector.yml
+++ b/Resources/config/collector.yml
@@ -1,7 +1,7 @@
 services:
 
     rs_queue.data_collector:
-        class: Mmoreram\RSQueueBundle\Collector\RSQueueCollector
+        class: RSQueueBundle\Collector\RSQueueCollector
         tags:
             - { name: data_collector, template: "RSQueueBundle:Collector:rsqueue", id: "rsqueue_collector" }
             - { name: kernel.event_listener, event: rsqueue.producer, method: onProducerAction }
