--- a/Resources/config/redis.yml
+++ b/Resources/config/redis.yml
@@ -1,7 +1,7 @@
 services:
 
     rs_queue.redis.factory:
-        class: Mmoreram\RSQueue\Factory\RedisFactory
+        class: RSQueue\Factory\RedisFactory
         arguments:
             redis: %rs_queue.server.redis%
 
