--- a/Resources/config/serializers.yml
+++ b/Resources/config/serializers.yml
@@ -1,9 +1,9 @@
 services:
 
     rs_queue.serializer.factory:
-        class: Mmoreram\RSQueue\Factory\SerializerFactory
+        class: RSQueue\Factory\SerializerFactory
         arguments:
             serializerClass: %rs_queue.serializer.class%
 
     rs_queue.serializer:
-        class: Mmoreram\RSQueue\SerializerInterface
+        class: RSQueue\SerializerInterface
