--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
         "rsqueue/rsqueue": "dev-master"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "1.11",
-        "mmoreram/php-formatter": "1.1.0",
-        "phpunit/phpunit": "5.4.4"
+        "friendsofphp/php-cs-fixer": "^1.12.4",
+        "mmoreram/php-formatter": "^1.3.1",
+        "phpunit/phpunit": "^5.6.5"
     },
     "autoload": {
         "psr-4": {
