--- a/.formatter.yml
+++ b/.formatter.yml
@@ -1,7 +1,4 @@
 use-sort:
-    group:
-        - _main
-        - RSQueueBundle
     group-type: each
     sort-type: alph
     sort-direction: asc
@@ -10,7 +7,7 @@ header: |
     /*
      * This file is part of the RSQueue library
      *
-     * Copyright (c) 2016 Marc Morera
+     * Copyright (c) 2016 - now() Marc Morera
      *
      * For the full copyright and license information, please view the LICENSE
      * file that was distributed with this source code.
