--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,20 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "symfony/config": "~2.3|~3.0",
-        "symfony/http-kernel": "~2.3|~3.0",
-        "symfony/http-foundation": "^3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
+        "php": ">=7.1",
+        "symfony/config": "^3.0|^4.0",
+        "symfony/http-kernel": "^3.0|^4.0",
+        "symfony/http-foundation": "^3.0|^4.0",
+        "symfony/dependency-injection": "~3.0|^4.0",
+        "symfony/framework-bundle": "~3.0|^4.0",
+        "mmoreram/base-bundle": "^1.0.7",
+        "mmoreram/symfony-bundle-dependencies": "^2.0.0",
         "rsqueue/rsqueue": "dev-master"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^1.12.4",
-        "mmoreram/php-formatter": "^1.3.1",
-        "phpunit/phpunit": "^5.6.5"
+        "phpunit/phpunit": "^5.6.4",
+        "mmoreram/php-formatter": "1.3.1",
+        "friendsofphp/php-cs-fixer": "^2.5.0"
     },
     "autoload": {
         "psr-4": {
