Updated lint deps and formatted all

--- a/.formatter.yml
+++ b/.formatter.yml
@@ -3,6 +3,7 @@ use-sort:
     sort-type: alph
     sort-direction: asc
 
+strict: true
 header: |
     /*
      * This file is part of the RSQueue library
