--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/framework-bundle": "~3.0|^4.0",
         "mmoreram/base-bundle": "^1.0.7",
         "mmoreram/symfony-bundle-dependencies": "^2.0.0",
-        "rsqueue/rsqueue": "dev-master"
+        "rsqueue/rsqueue": "^0.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6.4",
@@ -33,21 +33,13 @@
     },
     "scripts": {
         "fix-code": [
-            "vendor/bin/php-cs-fixer fix --config-file=.php_cs || true",
-            "vendor/bin/php-formatter f:u:s Collector || true",
-            "vendor/bin/php-formatter f:u:s DependencyInjection || true",
-            "vendor/bin/php-formatter f:u:s Tests || true",
-            "vendor/bin/php-formatter f:h:f Collector || true",
-            "vendor/bin/php-formatter f:h:f DependencyInjection || true",
-            "vendor/bin/php-formatter f:h:f Tests || true"
+            "vendor/bin/php-cs-fixer fix --config=.php_cs",
+            "vendor/bin/php-formatter f:h:f . --exclude=vendor",
+            "vendor/bin/php-formatter f:s:f . --exclude=vendor",
+            "vendor/bin/php-formatter f:u:s . --exclude=vendor"
         ],
         "test": [
             "vendor/phpunit/phpunit/phpunit"
         ]
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
     }
 }
